# jobflow

./: .env.example  .gitignore  README.md  api.py  dashboard.py  install.bat  install.ps1  pyproject.toml  start_dashboard.bat  start_dashboard.py  test_ai.py
config/: profile.yaml  sources.yaml
data/fixtures/: sample_jobs.json
jobflow/: __init__.py  applier.py  browser_sources.py  cli.py  config.py  daemon.py  models.py  notion.py  pipeline.py  scoring.py  sources.py  store.py  tailor.py  telegram.py  utils.py  validator.py
tests/: test_apply.py  test_config.py  test_pipeline.py  test_scoring.py  test_sources.py  test_store.py
ui/: package-lock.json
ui/src/: App.css  App.jsx  index.css
