[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobflow"
version = "0.1.0"
description = "Local job discovery and review pipeline"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "python-docx>=1.0.0",
]

[tool.setuptools]
packages = ["jobflow"]

