[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jobflow"
version = "0.1.0"
description = "Local job discovery and review pipeline"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "python-docx>=1.0.0",
    "streamlit>=1.30.0",
    "schedule>=1.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic",
]

[tool.setuptools]
packages = ["jobflow"]

